--- a/.github/workflows/update_signals.yml
+++ b/.github/workflows/update_signals.yml
@@ -30,11 +30,12 @@ jobs:
           python make_predictions.py
 
       - name: Commit and push updated signals
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add stock_signals.csv
-          git commit -m "Daily signal update"
-          git push
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Daily signal update" || echo "No changes to commit"
+          git push https://x-access-token:${GH_TOKEN}@github.com/nolknies/temp.git HEAD:main
+
