--- a/.github/workflows/update_signals.yml
+++ b/.github/workflows/update_signals.yml
@@ -1,15 +1,12 @@
-name: Update Daily Trading Signals
+name: Daily Signal Update
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # every day at 12:00 UTC (adjust as needed)
-  workflow_dispatch:      # lets you trigger manually from GitHub
-  push:
-    paths:
-      - make_predictions.py
+    - cron: '0 12 * * *'  # runs daily at 12:00 UTC
+  workflow_dispatch:
 
 jobs:
-  run-signals:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,8 +22,7 @@ jobs:
         run: |
           pip install yfinance pandas scikit-learn xgboost numpy imbalanced-learn ta
 
-      - name: Run signal generator
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+      - name: Run prediction and upload script
         run: |
           python make_predictions.py
+
