--- a/.github/workflows/update_signals.yml
+++ b/.github/workflows/update_signals.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install yfinance pandas scikit-learn xgboost numpy imbalanced-learn ta
+          pip install yfinance pandas scikit-learn xgboost numpy imbalanced-learn ta requests alpaca-py
 
       - name: Run prediction and upload script
         env:
